--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
           
 
-<div ><small class="copy">&copy; developed by yousuf</small></div>
+<footer><small >&copy; developed by yousuf</small></footer>
           
 
 
